--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1808,7 +1808,8 @@
   
   "boilerplate.containers.Payroll.Payroll.monthName": "Month",
   "boilerplate.containers.Payroll.Payroll.yearName": "Year",
-  "boilerplate.containers.Payroll.Payroll.executionId": "Id",
+  "boilerplate.containers.Payroll.Payroll.executionId": "Id",    
+  "boilerplate.containers.Payroll.Payroll.id": "Id",
   "boilerplate.containers.Payroll.Payroll.status": "Status",
   "boilerplate.containers.Payroll.Payroll.step": "Step",
   "boilerplate.containers.Payroll.Payroll.approvedEmp": "approved Employee",
@@ -1961,7 +1962,7 @@
     "boilerplate.containers.Payroll.Payroll.deductionYear": "Deduction Year",
     
     "boilerplate.containers.Payroll.Payroll.nativeTotalValue": "Basic Loan",
-    "boilerplate.containers.Payroll.Payroll.totalValue": "Total Value",
+    "boilerplate.containers.Payroll.Payroll.totalvalue": "Total Value",
     "boilerplate.containers.Payroll.Payroll.paysNo": "Pay No",
     "boilerplate.containers.Payroll.Payroll.payvalue": "Pay Value",    
     "boilerplate.containers.Payroll.Payroll.lineNo": "Line No",
@@ -2081,7 +2082,7 @@
   "boilerplate.containers.Payroll.Payroll.BasicLoan":"Basic Loan",
   "boilerplate.containers.Payroll.Payroll.paid":"Paid",
   "boilerplate.containers.Payroll.Payroll.outstanding":"Outstanding",
-  "boilerplate.containers.Payroll.Payroll.Notes":"Notes",
+  "boilerplate.containers.Payroll.Payroll.notes":"Notes",
   "boilerplate.containers.Payroll.Payroll.EndedLoans":"Ended Loans",
 
   "boilerplate.containers.Payroll.Payroll.YouMustToChooseAllYears_AllMonthsAndAtLeastOneElement":"You must to choose all years , all months and at least one element",
@@ -2432,8 +2433,8 @@
   "boilerplate.containers.Payroll.vac.job": "Job",
   "boilerplate.containers.Payroll.vac.filterOnRegistrationHistory": "Filter on registration history",
   "boilerplate.containers.Payroll.vac.search": "Search",
-  "boilerplate.containers.Payroll.vac.fromdate": "From Date",
-  "boilerplate.containers.Payroll.vac.todate": "To Date",
+  "boilerplate.containers.Payroll.vac.fromDate": "From Date",
+  "boilerplate.containers.Payroll.vac.toDate": "To Date",
   "boilerplate.containers.Payroll.vac.insuranceDate": "Insurance Date",
   "boilerplate.containers.Payroll.vac.serial": "Serial",
   "boilerplate.containers.Payroll.vac.consumedLeave": "Consumed Leave",
@@ -2450,6 +2451,8 @@
   "boilerplate.containers.Payroll.vac.leaveReason": "Leave Reason",
   "boilerplate.containers.Payroll.vac.exemptEntryRec": "Exempt Entry Rec.",
   "boilerplate.containers.Payroll.vac.exemptLeaveRec": "Exempt Leave Rec.",
+  "boilerplate.containers.Payroll.vac.id": "Id",
+  "boilerplate.containers.Payroll.vac.trxDate": "date",
   "boilerplate.containers.Payroll.vac.section": "Section",
   "boilerplate.containers.Payroll.vac.hiringMonth": "Hiring Month",
   "boilerplate.containers.Payroll.vac.insuranceNumber": "Insurance Number",
