--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2346,6 +2346,8 @@
   "boilerplate.containers.Payroll.Employee.RelativesName": "اسم القريب",
   "boilerplate.containers.Payroll.Employee.youMustChooseAnEmployee": "يجب اختيار موظف",
   "boilerplate.containers.Payroll.Employee.vacationReport": "تقرير الإجازات",
+  "boilerplate.containers.Payroll.Employee.editAddress": "تعديل العنوان",
+  "boilerplate.containers.Payroll.Employee.createAddress": "إنشاء عنوان",
   "boilerplate.containers.Payroll.Employee.rewordsReport": "تقرير المكافآت",
   "boilerplate.containers.Payroll.Employee.penaltyReport": "تقرير الجزاءات",
   "boilerplate.containers.Payroll.Employee.jobsReport": "تقرير الوظائف",
