--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1173,6 +1173,7 @@
   "boilerplate.containers.Payroll.HumanResources.quantity": "Quantity",
   "boilerplate.containers.Payroll.HumanResources.uniformPrice": "Price",
   "boilerplate.containers.Payroll.HumanResources.id": "Id",
+  "boilerplate.containers.Payroll.HumanResources.returnDate": "Return Date",
   "boilerplate.containers.Payroll.HumanResources.resignationDate": "Resignation Date",
   "boilerplate.containers.Payroll.HumanResources.lastWorkingDay": "Last Working Day",
   "boilerplate.containers.Payroll.HumanResources.department": "Department",
