--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2303,6 +2303,8 @@
   "boilerplate.containers.Payroll.Employee.fakeAddress": "Fake Address",
   "boilerplate.containers.Payroll.Employee.jobName": "Job Name",
   "boilerplate.containers.Payroll.Employee.insDate": "insDate",
+  "boilerplate.containers.Payroll.Employee.inDate": "In Date",
+  "boilerplate.containers.Payroll.Employee.outDate": "Out Date",
 
   "boilerplate.containers.Payroll.MainData.codes.id": "Id",
   "boilerplate.containers.Payroll.MainData.codes.preview": "Preview",
