--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1271,6 +1271,8 @@
   "boilerplate.containers.Payroll.Attendance.employeeId": "Employee",
   "boilerplate.containers.Payroll.Attendance.status": "Status",
   "boilerplate.containers.Payroll.Attendance.step": "Step",
+  "boilerplate.containers.Payroll.Attendance.swapShift": "Swap Shift",
+  "boilerplate.containers.Payroll.Attendance.supervisor": "Supervisor",
   "boilerplate.containers.Payroll.Attendance.approvedEmp": "approved Employee",
 
   "boilerplate.containers.Payroll.Attendance.permissionName": "Permission Type",
