Add Swap shift approval

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1300,6 +1300,8 @@
   "boilerplate.containers.Payroll.Attendance.status": "الحالة",
   "boilerplate.containers.Payroll.Attendance.step": "المرحلة",
   "boilerplate.containers.Payroll.Attendance.swapShift": "تحويل الي الوردية",
+  "boilerplate.containers.Payroll.Attendance.swapShiftName": "تحويل الي الوردية",
+  
   "boilerplate.containers.Payroll.Attendance.supervisor": "المشرف",
   "boilerplate.containers.Payroll.Attendance.approvedEmp": "صاحب القرار",
 
