FIX: fix startDate & endDate in arabic translation

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -874,8 +874,8 @@
   "boilerplate.components.tables.codes.add": "اضافة جديد",
   "boilerplate.components.tables.codes.phone": "رقم الهاتف",
   "boilerplate.components.tables.codes.course": "اسم الدورة",
-  "boilerplate.components.tables.codes.startdate": "من تاريخ",
-  "boilerplate.components.tables.codes.enddate": "الى تاريخ",
+  "boilerplate.components.tables.codes.startdate": "تاريخ البدء",
+  "boilerplate.components.tables.codes.enddate": "تاريخ الانتهاء",
   "boilerplate.components.tables.codes.araddress": "العنوان بالعربية",
   "boilerplate.components.tables.codes.enaddress": "العنوان بالانجليزية",
   "boilerplate.components.tables.codes.city": "المدينة",
