--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2309,6 +2309,9 @@
   "boilerplate.containers.Payroll.Employee.createAddress": "Create Address",
   "boilerplate.containers.Payroll.Employee.vacation": "Vacation",
   "boilerplate.containers.Payroll.Employee.absent": "Absent",
+  "boilerplate.containers.Payroll.Employee.allData": "All Data",
+  "boilerplate.containers.Payroll.Employee.someData": "Some Data",
+  "boilerplate.containers.Payroll.Employee.field": "Field",
   "boilerplate.containers.Payroll.Employee.statusInfo": "Status Info",
   "boilerplate.containers.Payroll.Employee.employeeNameShouldNotBeOneWord": "Employee Name Should Be More Than One Word",
   "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "Username Already Exist",
