--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -3105,6 +3105,7 @@
   "boilerplate.containers.Payroll.assessment.totalDegree": "Grade (%)",
   "boilerplate.containers.Payroll.assessment.evaluatedEmployee": "Evaluated Employee",
   "boilerplate.containers.Payroll.assessment.Appraisal": "Appraisal",
+  "boilerplate.containers.Payroll.assessment.textareaErrMes": "Text field is required",
 
 
   "boilerplate.containers.Payroll.SmartObjective.objective": "Objective",
