finish rename columns and remove column in EmployeeExperince page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -872,8 +872,8 @@
   "boilerplate.components.tables.codes.enJobKpi": "Job Kpi",
   "boilerplate.components.tables.codes.arJobKpi": "Arabic Job Kpi",
   "boilerplate.components.tables.codes.course": "Course",
-  "boilerplate.components.tables.codes.startdate": "Start Date",
-  "boilerplate.components.tables.codes.enddate": "End Date",
+  "boilerplate.components.tables.codes.startdate": "Start Insurance",
+  "boilerplate.components.tables.codes.enddate": "End Insurance",
   "boilerplate.components.tables.codes.araddress": "Arabic Address",
   "boilerplate.components.tables.codes.enaddress": "English Address",
   "boilerplate.components.tables.codes.city": "City",
