--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2569,7 +2569,7 @@
   "boilerplate.containers.Payroll.vac.leaveReason": "سبب الاجازة",
   "boilerplate.containers.Payroll.vac.exemptEntryRec": "اعفاء من تسجيل الحضور",
   "boilerplate.containers.Payroll.vac.exemptLeaveRec": "اعفاء من تسجيل الانصراف",
-  "boilerplate.containers.Payroll.vac.id": "الكود",
+  "boilerplate.containers.Payroll.vac.id": "كود الحركة",
   "boilerplate.containers.Payroll.vac.trxDate": "التاريخ",
   "boilerplate.containers.Payroll.vac.section": "القسم",
   "boilerplate.containers.Payroll.vac.consumedLeave": "الاجازة المستخدمة",
