finish add Used for Hr swicher in create and edit Vacation Type pages

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2540,6 +2540,8 @@
   "boilerplate.containers.Payroll.vac.code.AnnualInAdvance": "سنوى مقدم",
   "boilerplate.containers.Payroll.vac.code.MustAttachFile": "يلزم ارفاق ملف",
 
+  "boilerplate.containers.Payroll.vac.code.webInvisible": "تطلب بواسطة الموارد البشرية",
+
   "boilerplate.containers.Payroll.vac.uploadFileErrorMes": "الملف كبير للغاية",
   "boilerplate.containers.Payroll.vac.organization": "الادارة",
   "boilerplate.containers.Payroll.vac.registrationDate": "تاريخ التسجيل",
