--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2317,6 +2317,7 @@
   "boilerplate.containers.Payroll.Employee.employeeNameShouldNotBeOneWord": "Employee Name Should Be More Than One Word",
   "boilerplate.containers.Payroll.Employee.usernameAlreadyExist": "Username Already Exist",
   "boilerplate.containers.Payroll.Employee.email": "Email",
+  "boilerplate.containers.Payroll.Employee.nickName": "Nick Name",
   "boilerplate.containers.Payroll.Employee.relativePhoneNumber": "Relative Phone Number",
   "boilerplate.containers.Payroll.Employee.mobile": "Mobile",
   "boilerplate.containers.Payroll.Employee.telephone": "Telephone",
