--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2111,7 +2111,7 @@
 
   "boilerplate.containers.Payroll.Payroll.YouMustToChooseAllYears_AllMonthsAndAtLeastOneElement":"You must to choose all years , all months and at least one element",
 
-  "boilerplate.containers.Payroll.Payroll.elementValColNum":"element Val Col Num",
+  "boilerplate.containers.Payroll.Payroll.elementValColNum":"Value Column Number",
   
 
   "boilerplate.containers.Payroll.transportaion.ip":"Transportaion",  
